--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -128,10 +128,7 @@
     ]
   },
   // Add the IDs of extensions you want installed when the container is created.
-  "extensions": [
-    "rebornix.Ruby",
-    "WakaTime.vscode-wakatime"
-  ],
+  "extensions": ["rebornix.Ruby"],
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
   // "forwardPorts": [4567],
   // Use 'postCreateCommand' to run commands after the container is created.
